# ludo

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CodeGraph.md  README.md  config.ini  lua_http.md  ludo_scripting.htm  ludo_scripting.md
plugins/: baidu.lua  bigo.lua  bilibili.lua  bitchute.lua  bluesky.lua  dailymotion.lua  douyu.lua  dropbox.lua  example_plugin.lua  facebook.lua  gdrive.lua  generic.lua  generic_direct_download.lua  instagram.lua  iqiyi.lua  m3u8.lua  mediafire.lua  pinterest.lua  telegram.lua  tencent.lua  tiktok.lua  tube8.lua  twitch.lua  twitter.lua  utils.lua  vidio.lua  xiaohongshu.lua  youku.lua  youtube.lua
snippets/: http_base64.lua  http_cookies.lua  http_get.lua  http_get_async.lua  http_get_last_url.lua  http_head.lua  http_options.lua  http_parse_url.lua  http_post.lua  http_read_cookie.lua  http_sha256.lua  http_url_encode_decode.lua  json_cjson_safe.lua  json_config.lua  json_decode.lua  json_encode.lua  json_new.lua  lua_base.lua  lua_bit32.lua  lua_coroutine.lua  lua_debug.lua  lua_io.lua  lua_math.lua  lua_os.lua  lua_string.lua  lua_table.lua  ludo_get_http_header.lua  ludo_process_url.lua  ludo_process_url.lua.bak  ludo_string_match.lua  ludo_validate_url.lua  mediafire.lua  plugin_basic.lua  plugin_complex.lua  plugin_moderate.lua  ui_box.lua  ui_button.lua  ui_checkbox.lua  ui_colorbutton.lua  ui_combobox.lua  (+23 more)
snippets/old/: plugin_for_github.lua  plugin_with_ui.lua
src/: TODO.txt  aes128.c  aes128.h  config.c  config.h  console_log.c  console_log.h  dm_log.h  download_manager.c  download_manager.h  gui.c  gui.h  http_module.c  http_module.h  lua_cjson.c  lua_engine.c  lua_engine.h  ludo.manifest  ludo.rc  ludo.rc.in  ludo_module.c  ludo_module.h  main.c  platform_utils.c  platform_utils.h  thread_queue.c  thread_queue.h  version.h.in  win_toolbar_icons.cpp  win_toolbar_icons.h  zip_module.c  zip_module.h
src/ipc/: Makefile  ipc_abstraction.c  ipc_abstraction.h  ludo_native_messaging.c  ludo_native_messaging.h  wenativehost.c
tools/: Arcade ROMs Downloader.lua  CPS1.csv  CPS2.csv  Demo ZIP Library.lua  GBA.csv  GENESIS.csv  NEOGEO.csv  NES.csv  PlayStation Games Downloader.lua  Retro ROMs Data Generator.lua  Retro ROMs Downloader.lua  SNES.csv  archive.org.txt  archive.txt  extract_csv.lua  http_demo.lua  json_demo.lua  lua_demo.lua
tools/Demos/: Demo UI Library.lua
tools/ROMs/: Arcade ROMs Downloader.lua  CPS3.csv  FBNEO.csv  MAME.csv  N64.csv  PlayStation Games Downloader.lua  Retro ROMs Downloader.lua  archive.org.txt
